--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,8 +28,9 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t your-dockerhub-username/freelance-portal:latest .
+          docker build -f FreelancePortal/Dockerfile -t your-dockerhub-username/freelance-portal:latest FreelancePortal
           docker push your-dockerhub-username/freelance-portal:latest
+
 
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
