--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,2 @@
-[web]
-your-ec2-ip ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/your-key.pem
+[django]
+54.226.22.100 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa
